# cargo-feat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml
pgo-data/: default_17200134339273847687_0.profraw  default_9971553124244292588_0.profraw  merged.profdata
src/: main.rs
