[package]
name = "cargo-feat"
version = "0.1.0"
edition = "2024"
description = "Instantly look up available features for any crate on crates.io, directly in your terminal."
license = "Apache-2.0"
repository = "https://github.com/vunholy/cargo-feat"
keywords = ["cargo", "crates", "features", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "cargo-feat"
path = "src/main.rs"

[dependencies]
colorize = "0.1.0"
fake_user_agent = "0.2.3"
reqwest = {
	version = "0.13.2",
	default-features = false,
	features = ["http2", "native-tls", "hickory-dns", "system-proxy", "gzip", "brotli", "zstd", "deflate", "blocking"]
}

simd-json = "0.17.0"

serde = { version = "1", default-features = false, features = ["derive"] }
ahash = { version = "0.8.12" }
mimalloc = { version = "0.1.50", default-features = false }
hashbrown = { version = "0.17.0", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
debug = false
incremental = false
